test fix on shifting mobile UI

--- a/src/assets/css/Breakpoint.css
+++ b/src/assets/css/Breakpoint.css
@@ -145,3 +145,10 @@
     font-size: 30pt !important;
   }
 }
+
+@media (max-width: 425px) {
+  .banner .text-group {
+    position: absolute;
+    top: calc(100% - 172px);
+  }
+}
